# available_source_code

./: C++知识点总结.md  c++基础知识点1.md  data_struct_agthriom.md  myglwidget.cpp  myglwidget.h  qt知识点总结  qt知识点总结.md  smart_point.md  带来思考的一些信息.md  带来思考的一些信息1.md  机器视觉的相关知识.md
BasicProject/: readme.txt
ConsoleApplication1/: CommandDataDefine.hpp  ConsoleApplication1.sln  UrlJsonParse.cpp  UrlJsonParse.hpp  cJSON.cpp  cJSON.h  readme.md  test.cpp  test_json.h  test_xml.h
ConsoleApplication1/client/: client.cpp  client.vcxproj  client.vcxproj.filters  websocket_client.h
ConsoleApplication1/design_pattern/: design_pattern.sln  readme.md
ConsoleApplication1/learn_boost/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CallbackServer.ini  Config.h  Log.cpp  Log.h  Multiton.h  Singleton.h  SspServerMgr.hpp  Timer.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  learn_boost.cpp  learn_boost.sln  learn_boost.vcxproj  learn_boost.vcxproj.filters  readme.md  stdafx.cpp  websocket_server.h
ConsoleApplication1/learn_c++11/: ReadMe.md  ReadMe.txt  Timer.h  learn_c++11.cpp  learn_c++11.vcxproj  learn_c++11.vcxproj.filters  stdafx.cpp  test_packaged_task.h  threadpool.h  threadsafe_queue.h  tips.cpp  tips.h
gRpcTest（vs2015）/: activation.proto  gRpcTest.sln  service.proto  trade.proto
gRpcTest（vs2015）/gRpcServer/: GrpcServer.h  ReadMe.txt  activation.grpc.pb.cc  activation.grpc.pb.h  activation.pb.cc  activation.pb.h  gRpcServer.cpp  gRpcServer.vcxproj  gRpcServer.vcxproj.filters  stdafx.cpp  trade.grpc.pb.cc  trade.grpc.pb.h  trade.pb.cc  trade.pb.h
(+70 files in other folders)
